Change exports-private to open