@@ -12,5 +12,5 @@ jar --create --file mods/bookapp@1.0.jar --module-version=1.0 -C out/bookapp .
 java -cp $CLASSPATH \
      --module-path mods       \
      --add-modules java.xml.bind,java.sql,javassist \
-     --add-exports-private java.base/java.lang=javassist \
+     --add-opens java.base/java.lang=javassist \
      -m bookapp/main.Main
